--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,9 +14,10 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nisl nullam nisl ullamcorper
             volutpat amet ac. Volutpat, ultricies molestie ut pharetra id est feugiat hendrerit.
         </p>
-        <app-slider></app-slider>
+        <div class="wow animate__fadeInUp animate__animated">
+            <app-slider></app-slider>
+        </div>
     </div>
-
 </section>
 <section #technology id="technology">
     <app-technology></app-technology>
