--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,41 +1,31 @@
-<!--div class="container">
-  <footer class="py-3 my-4">
-    <ul class="nav justify-content-between align-items-center border-bottom pb-3">
-      <li><a class="logo"><img src="../../assets/images/logo.svg" alt="" width="40px"> WAVERITY</a></li>
-      <div class="nav flex-row justify-content-center mr-5">
-        <ul>
-        <li class="nav-item"><a href="#" class="nav-link px-2">Solutions</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2">Technology</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2">News</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2">About</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2">Careers</a></li>
-        </ul>
-      </div>
-      <li>
-        <form class="form-inline my-2 my-lg-0">
-          <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Contact</button>
-        </form>
-      </li>
-    </ul>
-    <p class="text-muted pt-5">&copy; 2021 WAVERITY. Developed by XALIZADEX</p>
-  </footer>
-</div -->
 <div id="footer">
-  <footer class="container align-items-center">
+  <footer class="container d-flex flex-lg-row flex-md-row flex-sm-column justify-content-between align-items-center">
     <div id="logo"><img src="../../assets/images/logo.svg" alt=""><a>WAVERITY</a></div>
     <div id="footer-bar">
       <ul>
-        <li><a href="solutions.html">Solutions</a></li>
-        <li><a href="index.html#technology">Technology</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="careers.html">Careers</a></li>
+        <li><a routerLink="/home">Technology</a></li>
+        <li><a routerLink="/news">News</a></li>
+        <li><a routerLink="/about">About</a></li>
+        <li><a routerLink="/careers">Careers</a></li>
       </ul>
     </div>
-    <div id="contact-button"><button class="pulse">Contact Us</button></div>
+    <div id="contact-button"><button (click)="openScrollableContent(longContent)">Contact Us</button></div>
   </footer>
   <div class="container credits">
     <h5>2022 © WAVERITY. All rights reserved.</h5>
     <!-- <h5>Designed and Developed by <a href="">XALIZADEX</a></h5> -->
   </div>
 </div>
+
+
+<ng-template #longContent let-modal>
+  <div class="modal-header">
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSesUmowTcYAyQBNPWbNlLCNyX-MfWmw1VtJnymrdMszLjdgxg/viewform?embedded=true" width="450" height="1050" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+  </div>
+</ng-template>
