--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -49,7 +49,7 @@
 }
 
 #intro-caption button:hover  {
-  color: var(--white);
+  color: var(--dark);
   background: var(--white);
   transition-duration: 300ms;
 }
@@ -106,6 +106,8 @@
   cursor: pointer;
 }
 
+
+
 .animated {
   visibility: visible !important;
 }
@@ -114,8 +116,8 @@
 }
 
 .news-description button:hover {
-  color: var(--white);
-  background-color: var(--dark);
+  color: var(--dark);
+  background: var(--white);
   transition-duration: 300ms;
 }/* 
 
