--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -5,7 +5,7 @@
     color: var(--white);
     padding: 15px 20px;
     background: rgba(72, 72, 72, 0.7);
-	backdrop-filter: blur(30px);
+    backdrop-filter: blur(30px);
     max-width: none;
 }
 
@@ -27,8 +27,8 @@
 
 .news-description {
     padding: 30px 55px 30px 25px;
-    background: rgba(38, 38, 38, 0.7)!important;
-    backdrop-filter: blur(3px)!important;
+    background: rgba(38, 38, 38, 0.7) !important;
+    backdrop-filter: blur(3px) !important;
     width: 100%;
     border-radius: 0 15px 3px 0;
 }
@@ -58,7 +58,7 @@
 
 .news-description button {
     background: rgba(72, 72, 72, 0.7);
-	backdrop-filter: blur(30px);
+    backdrop-filter: blur(30px);
     border: none;
     border-radius: 3px 10px;
     padding: 10px 15px;
@@ -70,13 +70,14 @@
 }
 
 .news-description button:hover {
-    color: var(--white);
-    background-color: var(--dark);
+    color: var(--dark);
+    background: var(--white);
     transition-duration: 300ms;
 }
 
-.ngx-pagination a, .ngx-pagination button {
-    color: var(--white)!important;
+.ngx-pagination a,
+.ngx-pagination button {
+    color: var(--white) !important;
 }
 
 @media only screen and (min-width: 768px) {
@@ -104,24 +105,26 @@ label {
     font-size: 1.2rem;
     margin-top: 1rem;
     margin-bottom: .5rem;
-  
-  }
-  input {
+
+}
+
+input {
     padding: .5rem;
     width: 100%;
     max-width: 600px;
     box-sizing: border-box;
     display: block;
-  }
-  
-  input:focus {
+}
+
+input:focus {
     outline: #336699 auto 1px;
-  }
-  
-  li {
+}
+
+li {
     list-style-type: none;
-  }
-  .search-result li a {
+}
+
+.search-result li a {
     border-bottom: 1px solid gray;
     border-left: 1px solid gray;
     border-right: 1px solid gray;
@@ -132,18 +135,18 @@ label {
     box-sizing: border-box;
     text-decoration: none;
     color: black;
-  }
-  
-  .search-result li a:hover {
+}
+
+.search-result li a:hover {
     background-color: #435A60;
     color: white;
-  }
-  
-  ul.search-result {
+}
+
+ul.search-result {
     margin-top: 0;
     padding-left: 0;
-  }
+}
 
-  :host {
-      filter: brightness(20%);
-  }
+:host {
+    filter: brightness(20%);
+}
