--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,8 +11,8 @@
     <!-- About Us -->
 
     <div class="container about-us animate__fadeInUp animate__animated">
-        <div class="d-flex flex-sm-column flex-lg-row justify-content-center align-items-center">
-            <img src="../../assets/images/about-us.jpg" alt="">
+        <div class="d-flex flex-column flex-sm-column flex-lg-row justify-content-center align-items-center">
+            <img src="../../assets/images/about-us.jpg" alt="" class="w-100 mb-2">
             <div>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ipsum, risus, magna scelerisque euismod
