--- a/src/app/rss/rss.component.html
+++ b/src/app/rss/rss.component.html
@@ -13,7 +13,7 @@
                     <a ngbNavLink>{{ data.title }}</a>
                     <ng-template ngbNavContent>
                         <div
-                            class="d-flex flex-lg-row flex-md-column flex-sm-column justify-content-center align-items-center">
+                            class="d-flex flex-lg-row flex-md-column flex-sm-column flex-column justify-content-center align-items-center">
                             <img [src]="data.cover" alt="" class="animate__fadeInLeft animate__animated">
                             <div class="product">
 
