--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -124,3 +124,24 @@
 #technology {
   background: url('../../assets/images/bg_all.svg');
 } */
+@media(max-width:650px) {
+  #intro{
+    padding-top: 100px;
+  }
+  #intro h1{
+    font-size: 3em;
+    line-height: initial;
+  }
+}
+
+@media(max-width:480px) {
+  .news-description{
+    padding: 15px;
+  }
+}
+
+@media(max-width:370px) {
+  #intro-caption{
+    margin: 0px;
+  }
+}
