--- a/src/app/oil/oil.component.css
+++ b/src/app/oil/oil.component.css
@@ -61,3 +61,20 @@ img-comparison-slider {
     backdrop-filter: blur(3px)!important;
     border-radius: 15px;
 }
+
+.tab-content img{
+    width: 100%;
+    height: 100%;
+    max-height: 500px;
+    margin: 0px 10px;
+}
+
+.product {
+    width: 50%;
+}
+
+@media screen and (max-width: 768px) {
+    .product {
+        width: 100%;
+    }
+}
