--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -10,7 +10,7 @@
               <div class="row align-items-center">
                 <div class="col-lg-5 animate__fadeInLeft animate__animated wow">
                   <div class="banner-img" data-animation="fadeInRight" data-delay="0.5s">
-                    <img [src]="item.cover" [alt]="item.title" width="490px" height="427px">
+                    <img [src]="item.cover" [alt]="item.title">
                   </div>
                 </div>
                 <div class="col-lg-7 animate__fadeInRight animate__animated wow">
