--- a/src/app/custom/custom.component.html
+++ b/src/app/custom/custom.component.html
@@ -4,8 +4,7 @@
             <div class="section-head container-md animate__fadeInDown animate__animated">
                 <h2>Custom Solutions</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nisl nullam nisl ullamcorper volutpat amet ac.
-                    Volutpat, ultricies molestie ut pharetra id est feugiat hendrerit.
+                    Our innovation-driven team can be your guide along the path of AI-driven transformation to tackle your business challenges.
                 </p>
             </div>
             <div class="bg">
