--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
         </div>
     </div>
 </section>
-<section>
+<section id="slider">
     <div class="container section">
         <h1>SOLUTIONS</h1>
         <div class="hr"></div>
@@ -26,10 +26,6 @@
     <div class="container section">
         <h1>NEWS</h1>
         <div class="hr"></div>
-        <p class="tech_p">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nisl nullam nisl ullamcorper
-            volutpat amet ac. Volutpat, ultricies molestie ut pharetra id est feugiat hendrerit.
-        </p>
         <div class="container row d-flex flex-md-row justify-content-between">
             <div class="news col-lg-4 col-md-6 col-sm-12 wow animate__fadeInUp animate__animated"
                 *ngFor="let data of news | paginate: {itemsPerPage: 3, currentPage: p};">
