--- a/src/app/technology/technology.component.html
+++ b/src/app/technology/technology.component.html
@@ -2,8 +2,10 @@
     <h1>TECHNOLOGY</h1>
     <div class="hr"></div>
     <p class="tech_p">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nisl nullam nisl ullamcorper
-        volutpat amet ac. Volutpat, ultricies molestie ut pharetra id est feugiat hendrerit.
+        Our products aim to empower business to tackle their complex problems via application of sophisticated
+        mathematical and
+        computational techniques including non-linear data processing, advance artificial intelligence and statistical
+        analysis.
     </p>
     <div class="section-full">
         <div class="time-line ">
@@ -11,13 +13,14 @@
                 <div class="line-left-box">
                     <div class="line-content-box wow animate__fadeInLeft animate__animated left-div">
                         <div class="left-img img1">
-                            <img src="../../assets/images/statistics.png" alt="statics image" height="70px">
-                            <h4 class="min-title text-uppercase text-primary m-t0 m-b15">STATISTICS</h4>
+                            <img src="../../assets/images/ai.png" alt="statics image" height="70px">
+                            <h4 class="min-title text-uppercase text-primary m-t0 m-b15">ARTIFICIAL<br>
+                                INTELLIGENCE</h4>
                         </div>
                         <div class="paragraph-left para">
-                            <p class="font-16">when an unknown printer took a galley of
-                                type and scrambled it to
-                                make a type specimen book. It has survived not only five centuries.</p>
+                            <p class="font-16">Cutting edge developments in the Artificial intelligence fields sit at
+                                the core of our applications developed to profoundly change the way businesses work with
+                                their own data.</p>
                         </div>
                     </div>
                 </div>
@@ -26,14 +29,14 @@
                 <div class="line-right-box">
                     <div class="line-content-box wow animate__fadeInRight animate__animated right-dev">
                         <div class="right-img img2">
-                            <img src="../../assets/images/ai.png" alt="statics image" height="70px">
-                            <h4 class="min-title text-uppercase text-primary m-t0 m-b15">ARTIFICIAL<br>
-                                INTELLIGENCE</h4>
+                            <img src="../../assets/images/big data.png" alt="statics image" height="70px">
+                            <h4 class="min-title text-uppercase text-primary m-t0 m-b15">BIG DATA</h4>
                         </div>
                         <div class="paragraph-right para1">
-                            <p class="font-16">when an unknown printer took a galley of type and
-                                scrambled it to make a type
-                                specimen book. It has survived not only five centuries.</p>
+                            <p class="font-16">The close integration of Big Data analytics into our
+                                products allows analysis of a large volume of data and fuels more effective decision
+                                making, modelling and prediction for improved business intelligence.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -42,14 +45,14 @@
                 <div class="line-left-box">
                     <div class="line-content-box wow animate__fadeInLeft animate__animated left-div">
                         <div class="left-img img3">
-                            <img src="../../assets/images/image processing.png" alt="statics image" height="70px">
-                            <h4 class="min-title text-uppercase text-primary m-t0 m-b15">SIGNAL & IMAGE<br>
-                                PROCESSING</h4>
+                            <img src="../../assets/images/statistics.png" alt="statics image" height="70px">
+                            <h4 class="min-title text-uppercase text-primary m-t0 m-b15">STATISTICS</h4>
                         </div>
                         <div class="paragraph-left para">
-                            <p class="font-16 left-paragraph para3">when an unknown printer took a galley of
-                                type and scrambled it to
-                                make a type specimen book. It has survived not only five centuries.</p>
+                            <p class="font-16 left-paragraph para3">Implementation of enhanced statistical methods
+                                inside our developments plays a crucial role during the data collection and analysis as
+                                well as an effective representation of results.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -58,14 +61,15 @@
                 <div class="line-right-box">
                     <div class="line-content-box wow animate__fadeInRight animate__animated right-dev">
                         <div class="right-img img4">
-                            <img src="../../assets/images/big data.png" alt="statics image" height="70px">
-                            <h4 class="min-title text-uppercase text-primary m-t0 m-b15">BIG DATA</h4>
+                            <img src="../../assets/images/image processing.png" alt="statics image" height="70px">
+                            <h4 class="min-title text-uppercase text-primary m-t0 m-b15">SIGNAL & IMAGE<br>
+                                PROCESSING</h4>
                         </div>
                         <div class="paragraph-right para1">
-                            <p class="right-paragraph para4">when an unknown printer took a galley of type
-                                and
-                                scrambled it to make a type
-                                specimen book. It has survived not only five centuries.</p>
+                            <p class="right-paragraph para4">Advanced processing algorithms enable extracting,
+                                analyzing and manipulating information embedded in complex signals and images. They
+                                allow the extraction of valuable insights via the enhancement of the true signals
+                                present in the original data.</p>
                         </div>
                     </div>
                 </div>
