--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,8 @@
 <div id="footer">
   <footer class="container d-flex flex-lg-row flex-md-row flex-sm-column justify-content-between align-items-center">
-    <div id="logo"><img src="../../assets/images/logo.svg" alt=""><a>WAVERITY</a></div>
+    <div id="logo"><a routerLink="/home"><img src="../../assets/images/logo2.svg" alt="" width="100px"></a></div>
     <div id="footer-bar">
       <ul>
-        <li><a routerLink="/home">Technology</a></li>
         <li><a routerLink="/news">News</a></li>
         <li><a routerLink="/about">About</a></li>
         <li><a routerLink="/careers">Careers</a></li>
