--- a/src/app/rss/rss.component.html
+++ b/src/app/rss/rss.component.html
@@ -3,8 +3,7 @@
         <div class="section-head container-md animate__fadeInDown animate__animated">
             <h2>Remote Sensing Systems</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nisl nullam nisl ullamcorper volutpat amet ac.
-                Volutpat, ultricies molestie ut pharetra id est feugiat hendrerit.
+                By applying Deep Learning algorithms and ML techniques we transform high resolution, multispectral satellite image data into powerful automated monitoring solutions that have broad applications in various industries.
             </p>
         </div>
         <div class="bg">
