--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -5,7 +5,7 @@
         <ngx-slick-carousel #slickModal="slick-carousel" [config]="settings" (init)="slickInit($event)"
           (beforeChange)="beforeChange($event)" class="banner-slider banner-slider-one banner-slider-active">
           <!-- Data -->
-          <div ngxSlickItem class="single-banner" *ngFor="let item of banner.oil">
+          <div ngxSlickItem class="single-banner" *ngFor="let item of oil">
             <div class="container-fluid container-1470">
               <div class="row align-items-center">
                 <div class="col-lg-5 animate__fadeInLeft animate__animated wow">
@@ -20,11 +20,11 @@
                         {{item.title}}
                       </h1>
                       <p data-animation="fadeInLeft" data-delay=".9s">
-                        {{item.info}}
+                        {{item.info | slice:0:250}}
                       </p>
-                      <a routerLink="/oil" data-animation="fadeInUp" data-delay="1.1s"
+                      <a routerLink="/oil/{{ item.id }}" data-animation="fadeInUp" data-delay="1.1s"
                         class="main-btn rounded-btn icon-right small-size">
-                        More Solutions
+                        Learn More
                       </a>
                     </div>
                   </div>
@@ -41,7 +41,7 @@
         <ngx-slick-carousel #slickModal="slick-carousel" [config]="settings" (init)="slickInit($event)"
           (beforeChange)="beforeChange($event)" class="banner-slider banner-slider-one banner-slider-active">
           <!-- Data -->
-          <div ngxSlickItem class="single-banner" *ngFor="let item of banner.rss">
+          <div ngxSlickItem class="single-banner" *ngFor="let item of rss">
             <div class="container-fluid container-1470">
               <div class="row align-items-center">
                 <div class="col-lg-5 animate__fadeInLeft animate__animated wow">
@@ -56,11 +56,11 @@
                         {{item.title}}
                       </h1>
                       <p data-animation="fadeInLeft" data-delay=".9s">
-                        {{item.info}}
+                        {{item.info | slice:0:250}}
                       </p>
-                      <a routerLink="/oil" data-animation="fadeInUp" data-delay="1.1s"
+                      <a routerLink="/rss/{{ item.id }}" data-animation="fadeInUp" data-delay="1.1s"
                         class="main-btn rounded-btn icon-right small-size">
-                        More Solutions
+                        Learn More
                       </a>
                     </div>
                   </div>
@@ -77,7 +77,7 @@
         <ngx-slick-carousel #slickModal="slick-carousel" [config]="settings" (init)="slickInit($event)"
           (beforeChange)="beforeChange($event)" class="banner-slider banner-slider-one banner-slider-active">
           <!-- Data -->
-          <div ngxSlickItem class="single-banner" *ngFor="let item of banner.custom">
+          <div ngxSlickItem class="single-banner" *ngFor="let item of custom">
             <div class="container-fluid container-1470">
               <div class="row align-items-center">
                 <div class="col-lg-5 animate__fadeInLeft animate__animated wow">
@@ -92,11 +92,11 @@
                         {{item.title}}
                       </h1>
                       <p data-animation="fadeInLeft" data-delay=".9s">
-                        {{item.info}}
+                        {{item.info | slice:0:250}}
                       </p>
-                      <a routerLink="/oil" data-animation="fadeInUp" data-delay="1.1s"
+                      <a routerLink="/custom/{{ item.id }}" data-animation="fadeInUp" data-delay="1.1s"
                         class="main-btn rounded-btn icon-right small-size">
-                        More Solutions
+                        Learn More
                       </a>
                     </div>
                   </div>
